APP : Google mock up : simulate loading of data APP : Add a loader bar when changing user and reloading data BUG : Don't display tab buttons while loading BUG : Was loading data twice BUG : Was hiding Faq to show it again later BUG : Don't open Faq when new user connect after another user BUG : Scroll Div not deleted when new user connect after another user BUG : Overflow scroll bars were displayed on all tables

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -87,7 +87,9 @@ marquee {
 }
 
 .mainDiv {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
+  margin: 25px;
 }
 
 .topMenu {
